--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev:web": "wepy build --output web",
     "clean": "find ./dist -maxdepth 1 -not -name 'project.config.json' -not -name 'dist' | xargs rm -rf",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint":"eslint --fix --ext .js,.wpy src"
-    },
+    "eslint": "eslint --fix --ext .js,.wpy src"
+  },
   "wepy": {
     "module-a": false,
     "./src/components/list": "./src/components/wepy-list.wpy"
@@ -18,6 +18,7 @@
   "author": "917942168@qq.com",
   "license": "MIT",
   "dependencies": {
+    "promise-polyfill": "^8.1.3",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
