--- a/project.config.json
+++ b/project.config.json
@@ -1,10 +1,13 @@
 {
 	"description": "larabbs weapp project",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": false,
 		"postcss": false,
-		"minified": false
+		"minified": false,
+		"newFeature": true,
+		"autoAudits": false,
+		"checkInvalidKey": true
 	},
 	"compileType": "miniprogram",
 	"appid": "wx49efbea7f14c4c89",
